--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -111,3 +111,29 @@
 	pages = {1124--1138},
 	file = {Francis - 2011 - Data weighting in statistical fisheries stock asse.pdf:C\:\\Users\\worc\\Zotero\\storage\\5A3N74P6\\Francis - 2011 - Data weighting in statistical fisheries stock asse.pdf:application/pdf},
 }
+
+@article{cookFrameworkAssessmentOffshore,
+	title = {Framework {Assessment} of the {Offshore} {American} {Lobster} ({Homarus} americanus) in {Lobster} {Fishing} {Area} ({LFA}) 41},
+	language = {en},
+	author = {Cook, Adam M and Da-Ros, Manon Cassista and Denton, Cheryl},
+	pages = {194},
+	file = {Cook et al. - Framework Assessment of the Offshore American Lobs.pdf:C\:\\Users\\worc\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf:application/pdf},
+}
+
+@article{chaputConsiderationsDefiningReference2015,
+	title = {Considerations for defining reference points for {Atlantic} {Salmon} that conform to the {Precautionary} {Approach}},
+	volume = {2015/074},
+	language = {en},
+	author = {Chaput, G},
+	year = {2015},
+	pages = {49},
+	file = {Chaput - Considerations for defining reference points for A.pdf:C\:\\Users\\worc\\Zotero\\storage\\KFDH5KB5\\Chaput - Considerations for defining reference points for A.pdf:application/pdf},
+}
+
+@article{marentetteSpecificationPrecautionaryApproach,
+	title = {Specification of {Precautionary} {Approach} {Reference} {Points} and {Harvest} {Control} {Rules} in {Domestically} {Managed} and {Assessed} {Key} {Harvested} {Stocks} {In} {Canada}},
+	language = {en},
+	author = {Marentette, Julie R and Kronlund, A Robert and Cogliati, Karen M},
+	pages = {105},
+	file = {Marentette et al. - Specification of Precautionary Approach Reference .pdf:C\:\\Users\\worc\\Zotero\\storage\\FK4GYX9L\\Marentette et al. - Specification of Precautionary Approach Reference .pdf:application/pdf},
+}
