--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -31,20 +31,17 @@ Scales of Pacific salmon assessment reporting
 
 
 
-Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already has LRPs defined as part of their management framework. DFO policy documents such as the "Harvest Decision-Making Framework Incorporating the Precautionary Approach" (citation) and "Canada's Policy for conservation of Wild Pacific Salmon" already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore], Atlantic salmon [@chaputConsiderationsDefiningReference2015],  cite a Pacific salmon example ? sockeye?
+Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already has LRPs defined as part of their management framework. DFO policy documents such as the "Harvest Decision-Making Framework Incorporating the Precautionary Approach" (citation) and "Canada's Policy for conservation of Wild Pacific Salmon" already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015],  cite a Pacific salmon example ? sockeye?
 
 
-
-LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs (cite snow crab, sue's tech report and the Australian papers. )
-
-@mullowneyBasisPrecautionaryApproach2018 defines reference points for snow crab based based on a multi dimensional approach, incorporating information from CPUE estimates, egg clutches and discards. Abundance based reference points are not appropriate for crabs as the fisheries regulations ensure that females, and males below a size limit are protected from exploitation, therefore variations in catches (legal sized males) and observed biomass are not an indication of the overall health of the population. 
+LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs (cite the Australian papers. ). In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards. In this paper, we apply the multi dimensional LRP approach introduced by (cite Grant tech report) to evaluate status of salmon stocks.  
 
 
-@portleyLimitReferencePoints2014 reviews the use of limit reference points (or their absence) for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs in allowing for cross-jurisdictional comparisons of sustainability.
+The use of LRPs and other reference points and harvest strategies has been gaining considerable interest, leading to a few review papers in recent years. Recent reviews of the application of harvest control rules and reference points include @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010.  @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest strategies in data-poor fisheries.  @marentetteSpecificationPrecautionaryApproach2021 reviewed the use of LRPs in many fisheries across Canada. They summarize the use of harvest control rules as well as target and limit reference points to support the development of science guidelines for the implementation of precautionary approach in light of the revised fisheries act. @kronlundConsiderationsDesignRebuilding2021 provided an overview of LRP in the context of rebuilding strategies and in light of Canadian fisheries policy and the revised fisheries act.
 
-In Canada, @chaputConsiderationsDefiningReference2012 reviews the use of reference points, including LRPs, in the management of salmonids and other semelparous species. This review is focused on the stock/CU level applications of LRPs and provides a comprehensive overview of the different methods available to assess CU status and their historical applications. It also provides considerations on managing multiple stock fisheries or managing multiple stocks as unit, it highlights that mixed stock management requires more precautionary benchmarks to ensure that all stocks remain above their limit reference points.
+In terms of salmonids, @portleyLimitReferencePoints2014 reviews the use of limit reference points (or their absence) for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including LRPs, in the management of salmonids and other semelparous species. This review is focused on the stock/Conservation Unit (CU) level applications of LRPs and provides a comprehensive overview of the different methods available to assess CU status and their historical applications. It also provides considerations on managing multiple stock fisheries or managing multiple stocks as unit, it highlights that mixed stock management requires more precautionary benchmarks to ensure that all stocks remain above their limit reference points. Previous work and guidance on setting LRPs for pacific salmon focused on management at the CU level. The present work expands on the previous work by providing guidance on setting LRPs for management at the SMU level, i.e. a group of CUs, taking into consideration the need to maintain all CUs within an SMU above their limit reference points. 
 
-Mention difference between previous salmon LRP work and this report: Previous work is focused on CU level LRP whereas the current work aims at providing guidance on setting LRPs for SMUs. 
+
 
 ## Role of LRPs
 
