add fraser sockeye ref

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -29,12 +29,10 @@ Scales of Pacific salmon assessment reporting
 ## Review of Reference Points for Pacific Salmon
 
 
+Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already has LRPs defined as part of their management framework. DFO policy documents such as the "Harvest Decision-Making Framework Incorporating the Precautionary Approach" (citation) and "Canada's Policy for conservation of Wild Pacific Salmon" already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015], and Fraser Sockeye  [@pestalMethodesMisesJour2012].
 
 
-Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already has LRPs defined as part of their management framework. DFO policy documents such as the "Harvest Decision-Making Framework Incorporating the Precautionary Approach" (citation) and "Canada's Policy for conservation of Wild Pacific Salmon" already recommended the establishment of LRPs to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015],  cite a Pacific salmon example ? sockeye?
-
-
-LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs (cite the Australian papers. ). In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards. In this paper, we apply the multi dimensional LRP approach introduced by (cite Grant tech report) to evaluate status of salmon stocks.  
+LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards. In this paper, we apply the multi dimensional LRP approach introduced by (cite Grant tech report) to evaluate status of salmon stocks.  
 
 
 The use of LRPs and other reference points and harvest strategies has been gaining considerable interest, leading to a few review papers in recent years. Recent reviews of the application of harvest control rules and reference points include @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010.  @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest strategies in data-poor fisheries.  @marentetteSpecificationPrecautionaryApproach2021 reviewed the use of LRPs in many fisheries across Canada. They summarize the use of harvest control rules as well as target and limit reference points to support the development of science guidelines for the implementation of precautionary approach in light of the revised fisheries act. @kronlundConsiderationsDesignRebuilding2021 provided an overview of LRP in the context of rebuilding strategies and in light of Canadian fisheries policy and the revised fisheries act.
