--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -181,3 +181,12 @@
 	month = jan,
 	year = {2010},
 }
+
+@article{pestalMethodesMisesJour2012,
+	title = {Méthodes mises à jour pour l’évaluation des règles de pêche au saumon rouge ({Oncorhynchus} nerka) du fleuve {Fraser}},
+	language = {en},
+	author = {Pestal, Gottfried and Huang, Ann-Marie and Cass, Alan},
+	year = {2012},
+	pages = {182},
+	file = {Pestal et al. - Méthodes mises à jour pour l’évaluation des règles.pdf:C\:\\Users\\worc\\Zotero\\storage\\3UUWMDJ4\\Pestal et al. - Méthodes mises à jour pour l’évaluation des règles.pdf:application/pdf},
+}
