--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -3,36 +3,34 @@
 ## CONTEXT
 The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that return to the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. Like most coho salmon, IF Coho spend at least one full year in freshwater as fry before migrating to the ocean as smolts [@arbeider_interior_2020]. During their freshwater fry residence, IF coho are believed to migrate away from spawning sites and into small tributaries and off-channel habitat. Most (88%) IFC have a 3-year life cycle, in which they leave freshwater in their second year and spend 18 months at sea prior to returning to their natal system to spawn.The remaining 12% have a 4-year life cycle in which they spend an additional year in freshwater before migrating as smolts in their third year. Both 3-year and 4-year life cycles spend 18 months at sea. Less than 1% of IF Coho are believed to return as jacks (precocious mature males that spend only 6 months as sea) or at ages older than 4 years [@arbeider_interior_2020].
 
-;; WSP Conservation Units (CUs) have been identified for of Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfo_wild_2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team also identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance in each of these smaller subpopulation units [@ifcrt_interior_fraser_coho_recovery_team_conservation_2006; Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic evidence. The 11 subpopulations are described in detail by the @ifcrt_interior_fraser_coho_recovery_team_conservation_2006. The Fraser Canyon CU is the only CU with a single subpopulation; this result is because most of the spawning for the CU occurs within a single river [@arbeider_interior_2020]. 
-
-
+WSP Conservation Units (CUs) have been identified for of Interior Fraser Coho based on genetics and geographic separation: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfo_wild_2015; Figure \@ref(fig:coho-map)]. Previous work by the Interior Fraser Coho Recovery Team also identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundance in each of these smaller subpopulation units [@ifcrt_interior_fraser_coho_recovery_team_conservation_2006; Table \@ref(tab:cohoCU2SP)]. The delineation of subpopulations was based on several factors, including the presence of natural barriers, the influence of large lakes on downstream discharge and thermal regimes, observations of spawner aggregations under differing discharge conditions, and genetic evidence. The 11 subpopulations are described in detail by the @ifcrt_interior_fraser_coho_recovery_team_conservation_2006. The Fraser Canyon CU is the only CU with a single subpopulation; this result is because most of the spawning for the CU occurs within a single river [@arbeider_interior_2020]. 
 
 ```{r coho-map, fig.cap="The five Conservation Units that make up the Interior Fraser Coho Stock Management Unit.", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-map.png")
 ```
 
 
--------------------------------------------------------
-Conservation Unit         Sub-population
-------------------------- ------------------------------ 
-Middle Fraser             Lower Middle Fraser
-                          Upper Middle Fraser
-                          
-Fraser Canyon             Nahatlatch
-  
-Lower Thompson            Lower Thompson
-                          Nicola
-  
-North Thompson            Lower North Thompson
-                          Middle Thompson
-                          Upper North Thompson
-  
-South Thompson            Adams Drainage
-                          Lower and Middle Shuswap Rivers
-                          Shuswap Lake Tributaries
-------------------------- ---------------------------------
-Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and associated sub-populations. Note that the definition of these sub-populations, including mapped boundaries, are provided in @ifcrt_interior_fraser_coho_recovery_team_conservation_2006.
++-------------------+--------------------------------+
+| Conservation Unit | Sub-populations        
++===================+================================+
+| Middle Fraser     | - Lower Middle Fraser          
+|                   | - Upper Middle Fraser
++-------------------+--------------------------------+    
+| Fraser Canyon     | - Nahatlatch          
++-------------------+--------------------------------+ 
+| Lower Thompson    | - Lower Thompson          
+|                   | - Nicola
++-------------------+--------------------------------+
+| North Thompson    | - Lower North Thompson      
+|                   | - Middle Thompson
+|                   | - Upper North Thompson
++-------------------+--------------------------------+
+| South Thompson    | - Adams Drainage      
+|                   | - Lower and Middle Shuswap Rivers
+|                   | - Shuswap Lake Tributaries
++-------------------+--------------------------------+
 
+Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and associated sub-populations. Note that the definition of these sub-populations, including mapped boundaries, are provided in @ifcrt_interior_fraser_coho_recovery_team_conservation_2006.
 
 Declines in IF Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@decker_assessment_2014]. Evidence of a new, lower productivity regime starting in return year 1994 has been documented [@decker_assessment_2014] that coincides with declines in spawner abundances.  In 2002, the IF Coho stock management unit was designated endangered by the  Committee on the Status of Endangered Wildlife in Canada (COSWEIC) based on the stock unit being assessed as a single 'Designatable Unit' (DU). Subsequent work by the Interior Fraser Coho Recovery Team lead to a conservation strategy outlining recovery objectives for the management unit (@ifcrt_interior_fraser_coho_recovery_team_conservation_2006). Those recovery objectives were largely based on the distribution of spawning escapement among the 11 subpopulations in Table \@ref(tab:cohoCU2SP). A short-term recovery objective of 20,000 spawners was identified as a level that would maintain a minimum of 1,000 naturally spawning wild Coho Salmon in at least half of the 11 subpopulations, while a long-term recovery target of 40,000 spawners was identified as a level that would maintain 1,000 or more wild Coho Salmon in all 11 subpopulations. In 2014, @decker_assessment_2014 assessed status relative to the 2006 IFCRT objectives, and concluded that IF coho had been above the short-term recovery target of 20,000 spawners in every year since 2008, and above the long-term recovery target of 40,000 spawners in the most recent two return years (2012 and 2013)  
 
@@ -44,18 +42,18 @@ To Do:  need to work in @korman_evaluation_2019
 
 ## DATA
 
-Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020; @ref(fig:coho-CU-timeseries-Combined)), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs.
+Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. Data were similar to those previously described in @arbeider_interior_2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeider_interior_2020 include the incorporation of three additional years of data (return years 2018-2020), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate recruitment-at-age (M. Arbeider, pers. comm).
 
 
+<!--
 ```{r coho-CU-timeseriesCombined, fig.cap="Escapement time series for five Interior Fraser Coho CUs", out.width = '80%', warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-Combined.png")
 ```
-
-
-Data were similar to those previously described in @arbeider_interior_2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeider_interior_2020 include the incorporation of three additional years of data (return years 2018-2020), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate recruitment-at-age (M. Arbeider, pers. comm).
+-->
 
 
 -	Still to add: 
+  - Highlight high among-CU correlation
   - Caveats: e.g., recruitment estimated using common ER for all CUs; review Arbeider et al. for additional data caveats
 
 
@@ -216,9 +214,9 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 
 **Results**
 
-For all five CUs, the generational (3-year) geometric average escapement between 2001 and 2020 remained above the 2020 estimate of Sgen ($Sgen_{2020}$), regardless of which stock recruit model was used to estimate Sgen (Figure \@ref(fig:coho-CU-timeseries)). Because the proportion of CUs above Sgen was always 100%, there were no years in which a trigger-based LRP that required 100% of CUs to be above Sgen would have been breached. Estimates of Sgen based on the IM.cap spawner recruit model were higher than those based on the IM model for three of the five CUs (Middle Fraser, Lower Thompson, and South Thompson CUs; Figure \@ref(fig:coho-CU-timeseries)). The North Thompson CU showed the opposite pattern, with the Sgen estimate from the IM model higher than that from the IM.cap model. The fifth CU, Fraser Canyon, had almost equal estimates for the two approaches. Thus, while the use of the IM.cap model would be expected to trigger an LRP breach at lower CU level abundances for the majority of CUs, generational average abundances remained high enough between 2001 and 2020 to avoid this happening. 
+Estimates of Sgen based on the IM.cap spawner recruit model were higher than those based on the IM model for three of the five CUs (Middle Fraser, Lower Thompson, and South Thompson) and were approximately equal for another CU (Fraser Canyon; Figure \@ref(fig:coho-CU-timeseries). As a result, we would expect the use of the IM.cap model to trigger an LRP breach at lower CU level abundances in most cases. However, generational average abundances remained high enough between 2000 and 2020 to avoid this happening. For all five CUs, the generational (3-year) geometric average escapement between 2000 and 2020 remained above the 2020 estimate of Sgen ($Sgen_{2020}$), regardless of which stock recruit model was used to estimate Sgen (Figure \@ref(fig:coho-CU-timeseries)). Because the proportion of CUs above Sgen was always 100%, there were no years in which a trigger-based LRP that required 100% of CUs to be above Sgen would have been breached. 
 
-Four of the 11 sub-populations had their generational average escapement remain above the 1000 spawner threshold in all years; the remaining 8 CUs dropped below 1000 spawners in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the trigger of more than half of the subpopulations within a CU with a generational average escapement less than 1000 fish was only met in a subset of years for most CUs. The Lower Thompson CU, which consists of two subpopulations, was the CU that most frequently dropped below the distributional benchmark, with at least one of the two subpopulations (Lower Thompson or Nicola) below 1000 spawners in 5 of the 20 years. In total, there were xx years in the 20-year time series in which one or more CUs failed to meet their distributional benchmark, triggering an LRP breach at the SMU level. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportional LRP based on distributional targets (Figure \@ref(fig:coho-Subpop-timeseries)).
+In contrast, the SMU-level LRP was breached in 4 of the 21 years between 2000 and 2020 years when the distributional CU benchmark was used to characterize CU-level status instead of Sgen for the proportion-based LRP. Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional benchmark at least half of the subpopulations within each CU with greater than 1000 fish was more often met than not. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportional LRP based on the distributional benchmark (Figure \@ref(fig:coho-Subpop-timeseries)).
 
 
 ### LRP Estimation: Aggregate Abundance Empirical LRPs 
@@ -260,80 +258,75 @@ where $nCUs$ is the number of CUs being used (3 or 4) and $LRP'_t$ is the LRP ca
 
 ***Logistic LRP Estimates in 2020***
 
+The logistic regression model fit to CU-level status predictions from the Sgen:IM Integrated LRP model in 2020 is shown in Figure \@ref(fig:coho-IM-logisticFit2020), while the resulting LRP estimates are shown in Table \@ref(tab:logisticLRPs2020). Aggregate abundance-based LRP estimates ranged from 15,395 spawners (95% CI = 11,187-19,603) when there was a required 50% probability that all CUs would be above Sgen to 24,331 spawners (95% CI = 13,924-34,738) when there was a required 99% probability that all CUs would be above Sgen (Table \@ref(tab:logisticLRPs2020)). While the Integrated Sgen:IM model was able to converge on a solution, there was considerable uncertainty around the predicted LRP curve as seen in the large area of gray shading in Figure \@ref(fig:coho-IM-logisticFit2020).
+
+Logistic regression diagnostics indicate that high uncertainty is a result of insufficient sample size.  
+
+
++------------------------+--------------+-----------------+-----------------+
+| Diagnostic Test        | Sgen: IM     | Sgen:IM.HiCap   | Distributional
++========================+==============+=================+=================+
+| Box-Tidwell p-value    | 0.81         | 1.0
++------------------------+--------------+-----------------+-----------------+         
+| Max. deviance residual | 1.52         | 1.68
++------------------------+--------------+-----------------+-----------------+  
+| AR-1                   | -0.20        | 0.16
++------------------------+--------------+-----------------+-----------------+
+| Min. sample size       | 77^*         | 26
++------------------------+--------------+-----------------+-----------------+
+| Wald Test p-value      | <0.01        | <0.01
++------------------------+--------------+-----------------+-----------------+
+| Quasi-R^2              | 0.68         | 0.63
++------------------------+--------------+-----------------+-----------------+
+| Hit Ratio (p*= 50%,    | 0.91, 0.91   | 0.87, 0.91,     |
+| 60%, 90%, 99%)         | 0.91, 0.74   | 0.87, 0.78      |
++--------------------+------------------+-----------------+------------------+
 
 
 
 
-```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit to CU-level status predictions from the Integrated Sgen-LRP model (1998 - 2020), where the logistic model is used to predict the probability that all CUs are above Sgen and Sgen is estimated using the IM spawner recruit model. The yellow vertical line shows the aggregate abundance-based LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs (MLE estimates only; no confidence intervals) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively. See Figure x caption additional details. ", warning=FALSE, echo=FALSE, out.width = '60%', fig.align="center"}
+
+```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit to CU-level status predictions from the Integrated Sgen-LRP model (1998 - 2020), where the logistic model is used to predict the probability that all CUs are above Sgen and Sgen is estimated using the IM spawner recruit model. The yellow vertical line shows the aggregate abundance-based LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs (MLE estimates only; no confidence intervals) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively. See Figure x caption additional details. ", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-IM2020-LogisticLRP.png")
 ```
 
 
-```{r coho-IMCap-logisticFit2020, fig.cap="Logistic regression fit to CU-level status predictions from the Integrated Sgen-LRP model (1998 - 2020), where the logistic model is used to predict the probability that all CUs are above Sgen and Sgen is estimated using the IM.HiCap spawner recruit model. The yellow vertical line shows the aggregate abundance-based LRP estimate based on the requirement that there is a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval. LRPs (based on MLE estimate only) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively. See Figure x caption additional details.", warning=FALSE, echo=FALSE, out.width = '60%', fig.align="center"}
+```{r coho-IMCap-logisticFit2020, fig.cap="Logistic regression fit to CU-level status predictions from the Integrated Sgen-LRP model (1998 - 2020), where the logistic model is used to predict the probability that all CUs are above Sgen and Sgen is estimated using the IM.HiCap spawner recruit model. The yellow vertical line shows the aggregate abundance-based LRP estimate based on the requirement that there is a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval. LRPs (based on MLE estimate only) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively. See Figure x caption additional details.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-IMCap2020-LogisticLRP.png")
 ```
 
 
-```{r coho-Distr-logisticFit2020, fig.cap="Logistic regression fit to IF Coho data (1998 - 2020) to predict the probability that all CUs are above the distributional lower benchmark of half of all subpopulations within a CU with spawning abundances above 1000 fish. The yellow vertical line shows the aggregate abundance-based LRP estimate based on the requirement that there is a 50\\% probability of all CUs being above the benchmark, while the yellow shaded region shows the associated 95\\% confidence interval. LRPs (based on MLE estimate only) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively. See Figure x caption for additional details.", warning=FALSE, echo=FALSE, out.width = '60%', fig.align="center"}
+```{r coho-Distr-logisticFit2020, fig.cap="Logistic regression fit to IF Coho data (1998 - 2020) to predict the probability that all CUs are above the distributional lower benchmark of half of all subpopulations within a CU with spawning abundances above 1000 fish. The yellow vertical line shows the aggregate abundance-based LRP estimate based on the requirement that there is a 50\\% probability of all CUs being above the benchmark, while the yellow shaded region shows the associated 95\\% confidence interval. LRPs (based on MLE estimate only) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively. See Figure x caption for additional details.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-ThreshAb2020-LogisticLRP.png")
 ```
 
 
-
-<!-- 
-------------------------------------------------------------------
-Probability 
-Threshold     Sgen: IM          Sgen:IM.HiCap       Distributional
-------------- ----------------- ----------------- ----------------
-50%           15,395            25,677            17,515
-              (11,187-19,603)   (20,683-30,672)   (9,695-25,336)
-                          
-66%           16,685            27,858            21,396
-              (12,454-20,916)   (21,674-34,042)   (13,418-29,375)
-  
-90%           19,668            32,901            30,372
-              (13,752-25,584)   (22,257-43,544)   (15,711-45,033)
-
-99%           24,331            40,784            44,403
-              (13,924-34,738)   (21,957-59,610)   (15,102-73,703)
-------------- ----------------- ----------------- -----------------
-Table: (\#tab:logisticLRPs2020) label me
-
--->
-
 +-------------+-----------------+-----------------+-----------------+
 | Probability | Sgen: IM        | Sgen:IM.HiCap   | Distributional
 +=============+=================+=================+=================+
-
 | 50%         | 15,395          | 25,677          | 17,515
 |             | (11,187-19,603) | (20,683-30,672) | (9,695-25,336)
-
-+-------------+-----------------+-----------------+-----------------+                         
-
++-------------+-----------------+-----------------+-----------------+                    
 | 66%         | 16,685          | 27,858          | 21,396
 |             | (12,454-20,916) | (21,674-34,042) | (13,418-29,375)
-
 +-------------+-----------------+-----------------+-----------------+  
-
 | 90%         | 19,668          | 32,901          | 30,372
 |             | (13,752-25,584) | (22,257-43,544) | (15,711-45,033)
-
 +-------------+-----------------+-----------------+-----------------+
-
 | 99%         | 24,331          | 40,784          | 44,403
 |             | (13,924-34,738) | (21,957-59,610) | (15,102-73,703)
-
 +-------------+-----------------+-----------------+-----------------+
 
-Table: (\#tab:logisticLRPs2020v2) label me
-
-
-
+Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confidence intervals) from logistic regressions applied to three alternative CU lower benchmarks (Sgen:IM, Sgen:IM.HiCap, and Distributional benchmark). For each probability level, the LRP estimate represents that probability that all CUs will be above their lower benchmark.
 
 Appendix: Maximum posterior density estimates (± standard error) obtained from fitting the ‘Individual Ricker’ (IM) version of the Integrated Sgen-LRP model to Inte
 rior Fraser Coho data.
 
 Appendix: Maximum posterior density estimates (± standard error) obtained from fitting the ‘Individual Ricker with cap’ (IM.cap) version of the Integrated Sgen-LRP model to Interior Fraser Coho data.
+
+
+
+***Logistic Regression Diagnostics***
 
 
 ***Retrospective Analysis***
