--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -165,9 +165,9 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 Projected LRPs are estimated using stochastic projections of future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that the required proportion of CUs will be above their lower benchmarks (e.g. Sgen). We used the samSim modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations (Holt et al. 2020; Freshwater et al. 2020). We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
 
-<!-- CW comment: I think we should add a little bit  moere explanation about the rationale for the  the projection based models. something like.
+<!-- CW comment: I think we should add a little bit  more explanation about the rationale for the  the projection based models in the paragraph above. something like.
 
-The projection-based LRP approach combines all the information known for the CUs within an SMU and then uses that information to project abundance trends into the future. The objective of this approach was to evaluate how the projection trajectories respond to exploitation when calculating LRPs. This approcah allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect ack of biological or fisheries information. 
+The projection-based LRP approach combines all the information known for the CUs within an SMU and then uses that information to project abundance trends into the future. The objective of this approach was to evaluate how the projected abundance trajectories respond to exploitation in relation to the LRPs. This approcah allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. 
  -->
 
 
