--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -38,7 +38,10 @@ Scales of Pacific salmon assessment reporting
 1. An outcome of interest such as a limit to be avoided or a target to be achieved, e.g., avoid spawning biomass levels less than BLRP;
 2. A desired probability of achieving the outcome in (1), e.g., 95% probability; and
 3. A time-frame over which to measure performance with respect to achieving (1) and (2), e.g., 20 years"
+-add some text from Kronlund et al. 2021 paper
 - example of this in Groundfish MP framework. When used within MP framwork. LRP may not need to be explicitly defined, as it is implicit within the framework (quote them on this point). One advantage of this approach is that no need to define single best assessment model. Instead, a range of plausible OMs can be included.
+
+- to be consistent with DFO PA Framework 
 
 - other roles? (e.g., prioritizing SMUs and planning monitoring/management).
 - these roles have not been clearly defined yet, and require further discussion beyond this process
